@@ -75,7 +75,7 @@ class JediTaskBuffer(TaskBuffer.TaskBuffer,CommandReceiveInterface):
                                    nEventsPerFile,nEventsPerJob,maxAttempt,firstEventNumber,
                                    nMaxFiles,nMaxEvents,useScout,fileList,useFilesWithNewAttemptNr,
                                    nFilesPerJob,nEventsPerRange,nChunksForScout,includePatt,
-                                   excludePatt,xmlConfig,noWaitParent,parent_tid,pid):
+                                   excludePatt,xmlConfig,noWaitParent,parent_tid,pid,maxFailure):
         # get DBproxy
         proxy = self.proxyPool.getProxy()
         # exec
@@ -85,7 +85,7 @@ class JediTaskBuffer(TaskBuffer.TaskBuffer,CommandReceiveInterface):
                                                   useScout,fileList,useFilesWithNewAttemptNr,
                                                   nFilesPerJob,nEventsPerRange,nChunksForScout,
                                                   includePatt,excludePatt,xmlConfig,
-                                                  noWaitParent,parent_tid,pid)
+                                                  noWaitParent,parent_tid,pid,maxFailure)
         # release proxy
         self.proxyPool.putProxy(proxy)
         # return
